[package]
name = "angela"
version = "0.1.0"
edition = "2021"

authors = ["rami3l <rami3l@outlook.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.55"
chrono = "0.4.19"
clap = { version = "3.1.5", features = ["cargo", "derive", "env"] }
clap-verbosity-flag = "1.0.0"
dotenv = "0.15.0"
indoc = "1.0.4"
itertools = "0.10.3"
rand = "0.8.5"
regex = { version = "1.5.4", default-features = false, features = [
    "std",
    "perf",
] }
reqwest = { version = "0.11.9", default-features = false, features = [] }
serde_json = "1.0.79"
teloxide = { version = "0.7.0", default-features = false, features = [
    "rustls",
    "ctrlc_handler",
    "auto-send",
    "cache-me",
    "dispatching2",
    "macros",
] }
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.31"
tracing-log = "0.1.2"
tracing-subscriber = "0.3.9"
url = "2.2.2"

[dev-dependencies]
pretty_assertions = "1.1.0"
