[package]
name = "angela"
version = "0.1.0"
edition = "2021"

authors = ["rami3l <rami3l@outlook.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
clap = { version = "3.1.8", features = ["cargo", "derive", "env"] }
clap-verbosity-flag = "1.0.0"
dotenv = "0.15.0"
futures = { version = "0.3.21", default-features = false, features = ["std"] }
indoc = "1.0.4"
itertools = "0.10.3"
once_cell = "1.10.0"
rand = "0.8.5"
regex = { version = "1.5.5", default-features = false, features = [
    "std",
    "perf",
] }
reqwest = { version = "0.11.10", default-features = false, features = [] }
serde_json = "1.0.79"
teloxide = { version = "0.7.3", default-features = false, features = [
    "rustls",
    "ctrlc_handler",
    "auto-send",
    "cache-me",
    "dispatching2",
    "macros",
] }
time = { version = "0.3.9", features = ["formatting"] }
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.32"
tracing-log = "0.1.2"
tracing-subscriber = "0.3.10"
url = "2.2.2"

[dev-dependencies]
pretty_assertions = "1.2.1"
