[project]
name = "angela"
version = ""
description = ""
authors = [{ name = "rami3l", email = "rami3l@outlook.com" }]
dependencies = [
    "python-dotenv>=0.20.0",
    "aiogram>=2.20",
]
requires-python = ">=3.9"
license = { text = "MIT" }
[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = ["black>=22.3.0", "pytest>=7.1.1", "jurigged>=0.4.1"]

[tool.pdm.scripts]
main = "python src/angela/main.py"
test = "pytest tests/"
fmt = "black ."
watch = "jurigged -v src/angela/main.py"
