[project]
name = "angela"
version = ""
description = ""
authors = [{ name = "rami3l", email = "rami3l@outlook.com" }]
dependencies = [
    "python-dotenv>=0.20.0",
    "aiogram>=2.21",
    "coloredlogs>=15.0.1",
    "overrides>=6.1.0",
    "aiohttp>=3.8.1",
    "certifi>=2021.10.8",
    "wiktionaryparser>=0.0.97",
    "duckduckgo3>=0.242",
    "iso639-lang>=2.0.1",
    "langdetect>=1.0.9",
]
requires-python = ">=3.10"
license = { text = "MIT" }
[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=22.3.0",
    "pytest>=7.1.1",
    "jurigged>=0.4.1",
    "mypy>=0.942",
    "pytest-asyncio>=0.18.3",
    "pydbg>=0.3.0",
]

[tool.pdm.scripts]
main = "python -m angela"
test = "pytest tests/"
fmt = "black ."
watch = "jurigged -m angela"

# Enable `console_scripts` to be visible to tools like `pipx`.
# See: https://pdm.fming.dev/latest/pyproject/pep621/#console-scripts
[project.scripts]
angela = "angela.__main__:main"

[tool.flake8]
# Recommend matching the black line length (default 88),
# rather than using the flake8 default of 79:
max-line-length = 88
# See https://github.com/PyCQA/pycodestyle/issues/373
extend-ignore = "E203"
